# ChangeLog for app-misc/gcal
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gcal/ChangeLog,v 1.21 2007/03/19 01:56:28 kloeri Exp $

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  22 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> gcal-3.01.ebuild,
  gcal-3.01-r1.ebuild, gcal-3.01-r2.ebuild:
  Use mirror://gnu/ rather than ftp.gnu.org.

  17 May 2005; Aaron Walker <ka0ttic@gentoo.org> gcal-3.01-r2.ebuild:
  Don't install locale.alias as it conflicts with glibc.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> gcal-3.01-r2.ebuild:
  stable on amd64

  05 Feb 2005; Michael Hanselmann <hansmi@gentoo.org> gcal-3.01-r2.ebuild:
  Stable on ppc.

  27 Dec 2004; <gongloo@gentoo.org> gcal-3.01-r2.ebuild:
  Added ~ppc-macos.

  12 Dec 2004; Jason Wever <weeve@gentoo.org> gcal-3.01-r2.ebuild:
  Stable on sparc.

  11 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> gcal-3.01-r2.ebuild:
  Stable on alpha.

  04 Nov 2004; Aaron Walker <ka0ttic@gentoo.org> gcal-3.01-r2.ebuild:
  Marked stable on x86.

  31 Oct 2004; Aaron Walker <ka0ttic@gentoo.org> metadata.xml:
  Added myself as maintainer.

*gcal-3.01-r2 (22 Oct 2004)

  22 Oct 2004; Aaron Walker <ka0ttic@gentoo.org>
  +files/gcal-3.01-mandir.diff, +gcal-3.01-r2.ebuild:
  New revision; install man pages in the correct directory (bug #32126) Thanks
  to Doug Weimer for the patch.

  21 Oct 2004; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml:
  Add metadata (shell-tools)

  05 Oct 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> gcal-3.01.ebuild:
  Masked gcal-3.01.ebuild stable for ppc

  06 Sep 2004; Lars Weiler <pylon@gentoo.org> gcal-3.01-r1.ebuild:
  Stable on ppc.

  05 Feb 2004; Aron Griffis <agriffis@gentoo.org> gcal-3.01-r1.ebuild:
  stable on alpha

  05 Jan 2004; Jon Portnoy <avenj@gentoo.org> gcal-3.01-r1.ebuild :
  AMD64 keywords.

*gcal-3.01-r1 (04 Aug 2003)
