@@ -1,5 +1,5 @@
 AUX gcal-3.01-mandir.diff 1515 RMD160 cf217233f05e78e0c5bb6adc4cb045bdd05fb2a6 SHA1 c99831b09dc92449736c1c9046fc596d5ddac785 SHA256 14beead09ceacf9837fcd9f4b843949974db4b8ee66b756f3a2391f63d1a0bc2
 DIST gcal-3.01.tar.gz 2371244 RMD160 01b54c72df3cbae242d221745343db4a9f3615cb SHA1 2f8dda0f759760c38beccd07fb73b18b392d6920 SHA256 e2bb8162cb5d6ce1abd27ea19e7a8f333409ac1060f8c1693416b544d4cb32d9
-EBUILD gcal-3.01-r2.ebuild 1803 RMD160 593bdb232c3c44ea61ce4f1c61d0d30be3fbe2b1 SHA1 9081cbddb6d2cf358d4fd0b3459213822759b63d SHA256 6fd1e27197469740116c67ce8475a8ef268b1b9850981a663f982cb1e6d1a169
-MISC ChangeLog 2427 RMD160 b5abcfc37d7d2cf30a3baa439a64014413a30ed9 SHA1 b5e6d71a3348aba18e7c3704e3a7455ea8256981 SHA256 e32b9c3afa9339914f5c154b9d91a8b15f6232ccdc09394b7cac797a58df595d
+EBUILD gcal-3.01-r2.ebuild 1815 RMD160 aa2683f0dae7e4fba1da82aecc6ccb19b8c13329 SHA1 38f83d36dca8dde253513b61c28b2818bf6914b9 SHA256 a551f53cc26ce97a1b71cef447c05ee67375e0387ec039a9cc2ad211d9917528
+MISC ChangeLog 2548 RMD160 ef52bc38a481612f6975639ff13c774d1304cc4a SHA1 6fcfda30e39799c1cd3222ad568e9e9269d4cb90 SHA256 c545cf51a1f5f5bf3e3a509df3e7d3310aff1d6579eb562fb39378b3e3e6076f
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
